--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,13 @@
 body {
-    background-color: #2176AE;
+    background-color: #FBFFBD;
   }
-  
+
+.index_h1 {
+  font-family: 'Montserrat', sans-serif;
+  }
+
 h1 {
-    color: #57B8FF;
+    color: #002AFF;
   }
 
 nav {
