--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,16 +1,62 @@
 body {
-    background-color: #FBFFBD;
-  }
+  background-color: #FBFFBD;
+}
 
 .index_h1 {
   font-family: 'Montserrat', sans-serif;
-  }
+}
 
 h1 {
-    color: #002AFF;
-  }
+  color: #002AFF;
+}
 
-nav {
-    background-color: #add8e6;
-    text-align: center;
-  }
+.container1 {
+  display: grid;
+  grid-template-columns: 2fr 1fr 1fr 2fr;
+  grid-template-rows: auto;
+}
+
+.firstgrid1 {
+  grid-column: span;
+}
+
+.firsrgrid2 {
+  grid-column: 2/3;
+  grid-row: 2;
+}
+
+.firsrgrid3 {
+  grid-column: 3/4;
+  grid-row: 2;
+}
+
+.container2 {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+}
+
+.secondgrid1 {
+  grid-column: 1/-1;
+}
+
+.secondgrid2 {
+  grid-column: 1/2;
+  grid-row: 2;
+}
+
+.secondgrid3 {
+  grid-column: 2/-1;
+  grid-row: 2;
+}
+
+.secondgrid4 {
+  grid-column: 1/2;
+  grid-row: 3;
+}
+
+footer {
+  background-color: #a6cad4;
+  text-align: center;
+}
