--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,9 @@
 body {
-  background-color: #FBFFBD;
+  background-color: #edddd0;
+}
+
+nav {
+  background-color: #a6cad4;
 }
 
 .index_h1 {
@@ -7,27 +11,17 @@ body {
 }
 
 h1 {
-  color: #002AFF;
+  color: #334259;
+  text-align: center;
 }
 
 .container1 {
-  display: grid;
-  grid-template-columns: 2fr 1fr 1fr 2fr;
-  grid-template-rows: auto;
+  display: flex;
+  justify-content: center;
 }
 
-.firstgrid1 {
-  grid-column: span;
-}
-
-.firsrgrid2 {
-  grid-column: 2/3;
-  grid-row: 2;
-}
-
-.firsrgrid3 {
-  grid-column: 3/4;
-  grid-row: 2;
+.flex1 {
+  padding: 10px;
 }
 
 .container2 {
@@ -37,21 +31,21 @@ h1 {
   grid-gap: 20px;
 }
 
-.secondgrid1 {
+.grid1 {
   grid-column: 1/-1;
 }
 
-.secondgrid2 {
+.grid2 {
   grid-column: 1/2;
   grid-row: 2;
 }
 
-.secondgrid3 {
+.grid3 {
   grid-column: 2/-1;
   grid-row: 2;
 }
 
-.secondgrid4 {
+.grid4 {
   grid-column: 1/2;
   grid-row: 3;
 }
